# kiwimanager

./: .gitignore  README.md  kiwimanager.cabal
db/: characters.sql  users.sql
snaplets/heist/templates/: _base.tpl  _nav.tpl  _nav_auth.tpl  _nav_non-auth.tpl  account.tpl  base.tpl  characters.tpl  index.tpl  login.tpl  register.tpl
src/: Application.hs  Character.hs  Config.hs  KiwiAuthManager.hs  KiwiBackend.hs  KiwiConfiguration.hs  Site.hs  SqliteBackend.hs  Status.hs  Types.hs  Utils.hs
static/: screen.css
