Name:                kiwimanager
Version:             0.1
Synopsis:            A game server monitoring web app
Description:         Allow monitoring server state, registering, and view data
License:             BSD
Author:              Jeremy Cochoy
Maintainer:          jeremy.cochoy@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable kiwimanager
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.12    && < 0.13,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.12.1  && < 0.13,
    snap-core                 >= 0.9.4   && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    transformers              >= 0.3,
    xmlhtml                   >= 0.1,
    network                   >= 2.4.1.2,
    clientsession             >= 0.9,
    HDBC                      >= 2.3,
    HDBC-sqlite3              >= 2.3,
    errors                    >= 1.4,
    hashmap                   >= 1.3,
    unordered-containers      >= 0.2.3,
    aeson                     >= 0.6.1,
    cryptohash                >= 0.9.0,
    split                     >= 0.2.2,
    entropy                   >= 0.2.1,
    email-validate            >= 1.0.0,
    regex-posix               >= 0.95.1

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.9

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
